--- a/src/app/home/control-panel/user/user-manage/user-manage.component.html
+++ b/src/app/home/control-panel/user/user-manage/user-manage.component.html
@@ -1,6 +1,6 @@
 <div class="settings">
   <div class="hover" (click)="showSettings = !showSettings">
-    <i class="fa fa-cog" style="margin-right: 5px"></i>
+    <i class="fa fa-cog font-xl" style="margin-right: 5px"></i>
     <label style="margin-right: 10px">Profile Settings</label>
     <i
       class="fa-point fa"
