--- a/src/app/home/control-panel/user/user-to-group-modal/user-to-group-modal.component.html
+++ b/src/app/home/control-panel/user/user-to-group-modal/user-to-group-modal.component.html
@@ -10,7 +10,7 @@
   <label class="sub-title"
     >Select users from the list below to add them to the follwoing group</label
   >
-  <div style="marin-top: 30px">
+  <div>
     <ag-grid-angular
       #agGrid
       class="ag-theme-balham grid"
