--- a/src/app/utils/search-box/search-box.component.scss
+++ b/src/app/utils/search-box/search-box.component.scss
@@ -4,10 +4,11 @@
     width: 300px !important;
     input {
         width: 300px !important; // background-color: $light;
-        background-color: rgba(0, 0, 0, 0.03);
+        border: 1px solid #ECECEC;
+        border-radius: 6px;
+        height: 40px;
         text-indent: 10px;
         padding: 0.25rem 0.75rem 0.25rem 0.12rem;
-        border-radius: 20px;
         &:active,
         &:focus {
             background-color: $white;
