--- a/src/app/home/control-panel/app/app.component.html
+++ b/src/app/home/control-panel/app/app.component.html
@@ -1,136 +1,223 @@
 <div class="d-flex flex-column w-100 h-100">
-	<div class="header d-flex align-items-center w-100 px-3">
-		<h3 class="m-0">Apps</h3>
-	</div>
-	<div class="options d-flex justify-content-between align-items-center w-100 p-3">
-		<button class="add-new btn-min-width btn btn-primary show" (click)="addApp(appOps)">
-			<span class="fa fa-plus-circle mr-2"></span>
-			<span class="text">Add new</span>
-		</button>
-		<form class="search-form d-flex position-relative" [formGroup]="searchForm" (ngSubmit)="search($event)"
-			*ngIf="!showLazyLoader && appList.length>0||appList.length==0">
-			<input type="text" placeholder="Search..." class="form-control" (keyup)="search($event)"
-				formControlName="searchTerm" id="_searchEntity">
-			<button type="submit" class="ml-3 btn btn-secondary btn-min-width">
-				<span class="text">Search</span>
-			</button>
-		</form>
-	</div>
-	<div class="d-flex flex-column w-100">
-		<div class="app-list" (scroll)="loadApps($event) ">
-			<table class="table table-hover table-hover" id="_appData">
-				<thead class="thead-light">
-					<tr>
-						<th>#</th>
-						<th>App</th>
-						<th>Description</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr *ngFor="let dom of appList;let i=index">
-						<td (click)="editApp(appOps,dom._id)">{{i+1}}</td>
-						<td (click)="editApp(appOps,dom._id)">{{dom._id}}</td>
-						<td (click)="editApp(appOps,dom._id)" class="description-td text-truncate"
-							[ngbTooltip]="dom.description">
-							{{dom.description?dom.description:'-'}}
-						</td>
-						<td class="text-right pr-3">
-							<ng-container *ngIf="app!==dom._id">
-								<span class="hover text-accent mr-3 odp-edit" (click)="editApp(appOps,dom._id)"
-									ngbTooltip="Edit"></span>
-								<span class="hover text-danger mr-3 odp-delete" (click)="delete(dom._id)"
-									ngbTooltip="Delete"></span>
-							</ng-container>
-							<ng-container *ngIf="app===dom._id">
-								<span class="text-muted font-weight-bold mr-3">Active</span>
-							</ng-container>
-						</td>
-					</tr>
-					<tr *ngIf="!showLazyLoader && appList.length==0">
-						<td colspan="5" class="text-center">zero. zip. zilch. nada.</td>
-					</tr>
-					<tr *ngIf="showLazyLoader">
-						<td colspan="5" class="text-center">
-							<span class="fa fa-spinner fa-pulse fa-lg"></span>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
+  <div class="header d-flex align-items-center w-100 px-3">
+    <h3 class="m-0">Apps</h3>
+  </div>
+  <div
+    class="options d-flex justify-content-between align-items-center w-100 p-3"
+  >
+    <button
+      class="add-new btn-min-width btn btn-primary show"
+      (click)="addApp(appOps)"
+    >
+      <span class="fa fa-plus-circle mr-2"></span>
+      <span class="text">Add</span>
+    </button>
+    <form
+      class="search-form d-flex position-relative"
+      [formGroup]="searchForm"
+      (ngSubmit)="search($event)"
+      *ngIf="(!showLazyLoader && appList.length > 0) || appList.length == 0"
+    >
+      <input
+        type="text"
+        placeholder="Search..."
+        class="form-control"
+        (keyup)="search($event)"
+        formControlName="searchTerm"
+        id="_searchEntity"
+      />
+      <button type="submit" class="ml-3 btn btn-secondary btn-min-width">
+        <span class="text">Search</span>
+      </button>
+    </form>
+  </div>
+  <div class="d-flex flex-column w-100">
+    <div class="app-list" (scroll)="loadApps($event)">
+      <table class="table table-hover table-hover" id="_appData">
+        <thead class="thead-light">
+          <tr>
+            <th>#</th>
+            <th>App</th>
+            <th>Description</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let dom of appList; let i = index">
+            <td (click)="editApp(appOps, dom._id)">{{ i + 1 }}</td>
+            <td (click)="editApp(appOps, dom._id)">{{ dom._id }}</td>
+            <td
+              (click)="editApp(appOps, dom._id)"
+              class="description-td text-truncate"
+              [ngbTooltip]="dom.description"
+            >
+              {{ dom.description ? dom.description : '-' }}
+            </td>
+            <td class="text-right pr-3">
+              <ng-container *ngIf="app !== dom._id">
+                <span
+                  class="hover text-accent mr-3 odp-edit"
+                  (click)="editApp(appOps, dom._id)"
+                  ngbTooltip="Edit"
+                ></span>
+                <span
+                  class="hover text-danger mr-3 odp-delete"
+                  (click)="delete(dom._id)"
+                  ngbTooltip="Delete"
+                ></span>
+              </ng-container>
+              <ng-container *ngIf="app === dom._id">
+                <span class="text-muted font-weight-bold mr-3">Active</span>
+              </ng-container>
+            </td>
+          </tr>
+          <tr *ngIf="!showLazyLoader && appList.length == 0">
+            <td colspan="5" class="text-center">zero. zip. zilch. nada.</td>
+          </tr>
+          <tr *ngIf="showLazyLoader">
+            <td colspan="5" class="text-center">
+              <span class="fa fa-spinner fa-pulse fa-lg"></span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 
 <ng-template #appOps>
-	<div class="modal-header bg-dark text-white p-3">
-		<h5 class="modal-title">{{operation}} App</h5>
-	</div>
-	<div class="modal-body p-3">
-		<form [formGroup]="appForm">
-			<div class="form-group position-relative">
-				<label>App Name
-					<sup class="text-danger">*</sup>
-				</label>
-				<ng-template #validationError>
-					<div class="d-flex flex-column">
-						<div *ngIf="appForm.get('_id').hasError('required') && appForm.get('_id').dirty"
-							class="d-flex justify-content-start">
-							<span class="fa fa-circle fa-xs pr-1 pt-1"></span>App name is required</div>
-						<div *ngIf="appForm.get('_id').hasError('length') && appForm.get('_id').dirty"
-							class="d-flex justify-content-start">
-							<span class="fa fa-circle fa-xs pr-1 pt-1"></span>Name should be less than 40 characters
-						</div>
-						<div *ngIf="appForm.get('_id').hasError('specialCharinAppName') && appForm.get('_id').dirty"
-							class="d-flex justify-content-start">
-							<span class="fa fa-circle fa-xs pr-1 pt-1"></span>Special characters not allowed</div>
-					</div>
-				</ng-template>
-				<div class="position-relative">
-					<input type="text" class="form-control" formControlName="_id">
-					<span *ngIf="appForm.get('_id').dirty && (appForm.get('_id').hasError('required') ||
-                       appForm.get('_id').hasError('length') ||
-                       appForm.get('_id').hasError('specialCharinAppName'))" [ngbTooltip]="validationError"
-						placement="right"
-						class="fa fa-exclamation-circle text-danger position-absolute field-error-symbol icon-position"></span>
-				</div>
-			</div>
-			<div class="form-group">
-				<label>Description</label>
-				<div class="position-relative">
-					<textarea class="form-control pr-4" formControlName="description" id="_description"></textarea>
-					<span *ngIf="appForm.get('description').dirty && appForm.get('description').hasError('length')"
-						ngbTooltip="Description should be less than 250 characters" placement="right"
-						class="fa fa-exclamation-circle text-danger position-absolute textarea-icon-position"></span>
-				</div>
-			</div>
-		</form>
-	</div>
-	<div class="modal-footer p-3 bg-light">
-		<button type="button" class="btn btn-min-width btn-link w-50 mx-3"
-			(click)="appOpsRef.close(false)">Cancel</button>
-		<button type="button" class="btn btn-min-width btn-primary w-50 mx-3" [disabled]="!appForm.valid"
-			(click)="appOpsRef.close(true)">Save</button>
-	</div>
+  <div class="modal-header bg-dark text-white p-3">
+    <h5 class="modal-title">{{ operation }} App</h5>
+  </div>
+  <div class="modal-body p-3">
+    <form [formGroup]="appForm">
+      <div class="form-group position-relative">
+        <label
+          >App Name
+          <sup class="text-danger">*</sup>
+        </label>
+        <ng-template #validationError>
+          <div class="d-flex flex-column">
+            <div
+              *ngIf="
+                appForm.get('_id').hasError('required') &&
+                appForm.get('_id').dirty
+              "
+              class="d-flex justify-content-start"
+            >
+              <span class="fa fa-circle fa-xs pr-1 pt-1"></span>App name is
+              required
+            </div>
+            <div
+              *ngIf="
+                appForm.get('_id').hasError('length') &&
+                appForm.get('_id').dirty
+              "
+              class="d-flex justify-content-start"
+            >
+              <span class="fa fa-circle fa-xs pr-1 pt-1"></span>Name should be
+              less than 40 characters
+            </div>
+            <div
+              *ngIf="
+                appForm.get('_id').hasError('specialCharinAppName') &&
+                appForm.get('_id').dirty
+              "
+              class="d-flex justify-content-start"
+            >
+              <span class="fa fa-circle fa-xs pr-1 pt-1"></span>Special
+              characters not allowed
+            </div>
+          </div>
+        </ng-template>
+        <div class="position-relative">
+          <input type="text" class="form-control" formControlName="_id" />
+          <span
+            *ngIf="
+              appForm.get('_id').dirty &&
+              (appForm.get('_id').hasError('required') ||
+                appForm.get('_id').hasError('length') ||
+                appForm.get('_id').hasError('specialCharinAppName'))
+            "
+            [ngbTooltip]="validationError"
+            placement="right"
+            class="fa fa-exclamation-circle text-danger position-absolute field-error-symbol icon-position"
+          ></span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Description</label>
+        <div class="position-relative">
+          <textarea
+            class="form-control pr-4"
+            formControlName="description"
+            id="_description"
+          ></textarea>
+          <span
+            *ngIf="
+              appForm.get('description').dirty &&
+              appForm.get('description').hasError('length')
+            "
+            ngbTooltip="Description should be less than 250 characters"
+            placement="right"
+            class="fa fa-exclamation-circle text-danger position-absolute textarea-icon-position"
+          ></span>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer p-3 bg-light">
+    <button
+      type="button"
+      class="btn btn-min-width btn-link w-50 mx-3"
+      (click)="appOpsRef.close(false)"
+    >
+      Cancel
+    </button>
+    <button
+      type="button"
+      class="btn btn-min-width btn-primary w-50 mx-3"
+      [disabled]="!appForm.valid"
+      (click)="appOpsRef.close(true)"
+    >
+      Save
+    </button>
+  </div>
 </ng-template>
 
 <ng-template #alertModal>
-	<div class="modal-body p-4">
-		<div class="circle bg-dark">
-			<span class="fa fa-trash text-white"></span>
-		</div>
-		<p class="text-dark font-weight-bold text-center">{{alert.title}}</p>
-		<p class="text-secondary text-center">{{alert.message}}</p>
-	</div>
-	<div class="modal-footer p-3 bg-light">
-		<ng-container *ngIf="alert.cancleBtn">
-			<button type="button" class="btn btn-min-width btn-primary w-50 mx-3"
-				(click)="alertModalRef.close(true)">Ok</button>
-		</ng-container>
-		<ng-container *ngIf="!alert.cancleBtn">
-			<button type="button" class="btn btn-min-width btn-link w-50 mx-3"
-				(click)="alertModalRef.close(false)">No</button>
-			<button type="button" class="btn btn-min-width btn-primary w-50 mx-3"
-				(click)="alertModalRef.close(true)">Yes</button>
-		</ng-container>
-	</div>
+  <div class="modal-body p-4">
+    <div class="circle bg-dark">
+      <span class="fa fa-trash text-white"></span>
+    </div>
+    <p class="text-dark font-weight-bold text-center">{{ alert.title }}</p>
+    <p class="text-secondary text-center">{{ alert.message }}</p>
+  </div>
+  <div class="modal-footer p-3 bg-light">
+    <ng-container *ngIf="alert.cancleBtn">
+      <button
+        type="button"
+        class="btn btn-min-width btn-primary w-50 mx-3"
+        (click)="alertModalRef.close(true)"
+      >
+        Ok
+      </button>
+    </ng-container>
+    <ng-container *ngIf="!alert.cancleBtn">
+      <button
+        type="button"
+        class="btn btn-min-width btn-link w-50 mx-3"
+        (click)="alertModalRef.close(false)"
+      >
+        No
+      </button>
+      <button
+        type="button"
+        class="btn btn-min-width btn-primary w-50 mx-3"
+        (click)="alertModalRef.close(true)"
+      >
+        Yes
+      </button>
+    </ng-container>
+  </div>
 </ng-template>
