--- a/src/app/home/control-panel/user-group/user-group.component.html
+++ b/src/app/home/control-panel/user-group/user-group.component.html
@@ -1,4 +1,7 @@
-<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+<div
+  class="default-loader d-flex justify-content-center w-100 h-100"
+  *ngIf="showLazyLoader"
+>
   <div class="align-self-center text-center">
     <span class="fa fa-spinner fa-pulse fa-3x"></span>
     <div class="text-secondary mt-2">Processing...</div>
@@ -6,37 +9,58 @@
 </div>
 <div class="d-flex flex-column">
   <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
-  <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3">
+  <div
+    class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3"
+  >
     <div class="font-weight-bold font-lg">List of Groups</div>
     <!--<odp-search-box (enteredText)="searchGroup($event)" (reset)="resetSearch();"></odp-search-box>-->
-    <odp-search-box (enteredText)="searchGroup($event)" (reset)="resetSearch()"></odp-search-box>
-    <button class="add-new btn-min-width btn btn-primary" (click)="addNewGroup()" *ngIf="hasPermission('PMGBC')">
+    <odp-search-box
+      (enteredText)="searchGroup($event)"
+      (reset)="resetSearch()"
+    ></odp-search-box>
+    <button
+      class="add-new btn-min-width btn btn-primary"
+      (click)="addNewGroup()"
+      *ngIf="hasPermission('PMGBC')"
+    >
       <span class="fa fa-plus mr-2"></span>
       <span class="text">New Group</span>
     </button>
   </div>
   <div class="d-flex flex-column w-100 pl-3">
-    <div class="card-container pt-3 d-flex flex-wrap" (scroll)="loadMore($event)">
-      <div class="group-card m-3 text-center hover" (click)="addNewGroup()" *ngIf="hasPermission('PMGBC')">
-        <div class="group-card-circle bg-white d-flex flex-column justify-content-center align-items-center mb-2">
+    <div
+      class="card-container pt-3 d-flex flex-wrap"
+      (scroll)="loadMore($event)"
+    >
+      <div
+        class="group-card m-3 text-center hover"
+        (click)="addNewGroup()"
+        *ngIf="hasPermission('PMGBC')"
+      >
+        <div
+          class="group-card-circle bg-white d-flex flex-column justify-content-center align-items-center mb-2"
+        >
           <div class="align-self-center text-center bg-primary p-3 circle">
             <span class="fa fa-plus fa-lg text-white"></span>
           </div>
         </div>
-        <span class="text-primary">Add New Group</span>
+        <span class="text-primary">Add Group</span>
       </div>
       <ng-container *ngFor="let group of groupList">
         <div class="group-card text-center m-3 hover">
           <div
             class="group-card-circle bg-white d-flex flex-column justify-content-center align-items-center mb-2 hover"
-            [routerLink]="['../gm',group._id]">
+            [routerLink]="['../gm', group._id]"
+          >
             <!-- <odp-group-icon color="666"></odp-group-icon> -->
             <span class="odp-users fa-2x"></span>
             <div class="d-flex align-items-center mt-2">
-              <span class="font-weight-bold">{{group.users.length}}</span>
+              <span class="font-weight-bold">{{ group.users.length }}</span>
             </div>
           </div>
-          <div class="text-truncate" [ngbTooltip]="group.name">{{group.name}}</div>
+          <div class="text-truncate" [ngbTooltip]="group.name">
+            {{ group.name }}
+          </div>
         </div>
       </ng-container>
     </div>
@@ -84,54 +108,108 @@
   </div>
 </ng-template> -->
 <ng-template #newGroupModal>
-  <div class="new-service-modal modal-body p-4 d-flex flex-column align-items-center" [formGroup]="form">
+  <div
+    class="new-service-modal modal-body p-4 d-flex flex-column align-items-center"
+    [formGroup]="form"
+  >
     <div class="d-flex flex-column w-100">
       <div class="d-flex align-items-center justify-content-between mb-3">
         <div class="d-flex align-items-center">
-          <span class="icon-wrapper rounded-circle d-flex align-items-center justify-content-center mr-2">
-            <odp-service-icon size="16" color="1CAD49" class="mt-1"></odp-service-icon>
+          <span
+            class="icon-wrapper rounded-circle d-flex align-items-center justify-content-center mr-2"
+          >
+            <odp-service-icon
+              size="16"
+              color="1CAD49"
+              class="mt-1"
+            ></odp-service-icon>
           </span>
           <span class="font-weight-bold mt-2">New Group</span>
         </div>
-        <span class="fa fa-times text-muted hover" (click)="newGroupModalRef.close(false)"></span>
+        <span
+          class="fa fa-times text-muted hover"
+          (click)="newGroupModalRef.close(false)"
+        ></span>
       </div>
       <div class="d-flex flex-column w-100">
         <label for="name" class="font-sm text-secondary">
           <span class="text">Name</span>
-          <sup class="text-danger font-normal high-zIndex" ngbTooltip="Mandatory field">*</sup>
+          <sup
+            class="text-danger font-normal high-zIndex"
+            ngbTooltip="Mandatory field"
+            >*</sup
+          >
         </label>
         <div class="name-wrapper position-relative">
-          <input newServiceName type="text" class="form-control" id="name" placeholder="Untitled Service"
-            formControlName="name" (keyup.enter)="newServiceTextarea.focus()" odpAutoFocus
-            [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
+          <input
+            newServiceName
+            type="text"
+            class="form-control"
+            id="name"
+            placeholder="Untitled Service"
+            formControlName="name"
+            (keyup.enter)="newServiceTextarea.focus()"
+            odpAutoFocus
+            [ngClass]="{
+              'is-invalid': form.get('name').invalid && form.get('name').dirty
+            }"
+          />
           <ng-container *ngIf="form.get('name').dirty">
-            <span *ngIf="form.get('name').hasError('required')"
-              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-              ngbTooltip="Name is required"></span>
-            <span *ngIf="form.get('name').hasError('maxlength')"
-              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-              ngbTooltip="Name should be within 30 characters"></span>
-            <span *ngIf="form.get('name').hasError('pattern')"
-              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-              ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
+            <span
+              *ngIf="form.get('name').hasError('required')"
+              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex"
+              container="body"
+              ngbTooltip="Name is required"
+            ></span>
+            <span
+              *ngIf="form.get('name').hasError('maxlength')"
+              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex"
+              container="body"
+              ngbTooltip="Name should be within 30 characters"
+            ></span>
+            <span
+              *ngIf="form.get('name').hasError('pattern')"
+              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex"
+              container="body"
+              ngbTooltip="Name can be only alphanumeric and can only contain spaces"
+            ></span>
           </ng-container>
         </div>
-        <label for="description" class="font-sm text-secondary mt-3">Description</label>
+        <label for="description" class="font-sm text-secondary mt-3"
+          >Description</label
+        >
         <div class="name-wrapper position-relative">
-          <textarea #newServiceTextarea class="form-control" id="description" rows="5" placeholder="No description"
-            formControlName="description" (keydown.enter)="$event.preventDefault()"
-            (keyup.enter)="newGroupModalRef.close(true)"></textarea>
+          <textarea
+            #newServiceTextarea
+            class="form-control"
+            id="description"
+            rows="5"
+            placeholder="No description"
+            formControlName="description"
+            (keydown.enter)="$event.preventDefault()"
+            (keyup.enter)="newGroupModalRef.close(true)"
+          ></textarea>
           <ng-container *ngIf="form.get('description').dirty">
-            <span *ngIf="form.get('description').hasError('maxlength')"
-              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-              ngbTooltip="Description should be within 240 characters"></span>
+            <span
+              *ngIf="form.get('description').hasError('maxlength')"
+              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex"
+              container="body"
+              ngbTooltip="Description should be within 240 characters"
+            ></span>
           </ng-container>
         </div>
       </div>
     </div>
     <div class="d-flex align-self-end justify-content-end w-100 mt-3">
-      <button type="button" class="btn btn-min-width btn-create" id="newServiceModalYes" [disabled]="form.invalid"
-        (click)="newGroupModalRef.close(true)">Create</button>
+      <button
+        type="button"
+        class="btn btn-min-width btn-create"
+        id="newServiceModalYes"
+        [disabled]="form.invalid"
+        (click)="newGroupModalRef.close(true)"
+      >
+        Create
+      </button>
     </div>
   </div>
 </ng-template>
