--- a/src/app/admin/app-list/app-list.component.html
+++ b/src/app/admin/app-list/app-list.component.html
@@ -107,7 +107,7 @@
               {{ app.firstLetter }}
             </div>
             <div class="delete-option border-right bg-danger d-flex align-items-center justify-content-center hover ignore-outside" (click)="$event.stopPropagation();deleteApp(app, appIndex)">
-              <span class="fas fa-trash text-white"></span>
+              <span class="fas fa-trash text-white fa-xs"></span>
             </div>
           </div>
           <!-- <div class="app-settings rounded-circle position-absolute bg-primary d-flex align-items-center justify-content-center align-self-end hover"
