--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -257,8 +257,8 @@ $line-height-sm:              1 !default;
 $border-width:                1px !default;
 $border-color:                $gray-300 !default;
 
-$border-radius:               .25rem !default;
-$border-radius-lg:            .5rem !default;
+$border-radius:               0.375rem !default;
+$border-radius-lg:            .75rem !default;
 $border-radius-sm:            .25rem !default;
 
 $rounded-pill:                50rem !default;
@@ -300,18 +300,18 @@ $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberati
 $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
 
-$font-size-base:              0.875rem !default; // Assumes the browser default, typically `16px`
-$font-size-lg:                1rem !default;
-$font-size-sm:                0.8125rem !default;
+$font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
+$font-size-lg:                1.25rem !default;
+$font-size-sm:                0.75rem !default;
 
 $font-weight-lighter:         lighter !default;
-$font-weight-light:           300 !default;
-$font-weight-normal:          400 !default;
+$font-weight-light:           200 !default;
+$font-weight-normal:          300 !default;
 $font-weight-bold:            600 !default;
 $font-weight-bolder:          bolder !default;
 
 $font-weight-base:            $font-weight-normal !default;
-$line-height-base:            1.3 !default;
+$line-height-base:            2 !default;
 
 $h1-font-size:                $font-size-base * 2.5 !default;
 $h2-font-size:                $font-size-base * 2 !default;
@@ -405,7 +405,7 @@ $table-border-level:          -6 !default;
 //
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
 
-$input-btn-padding-y:         .25rem !default;
+$input-btn-padding-y:         .2rem !default;
 $input-btn-padding-x:         .75rem !default;
 $input-btn-font-family:       null !default;
 $input-btn-font-size:         $font-size-base !default;
