--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -26,13 +26,13 @@
             <!-- <span class="text">Bulk Import</span> -->
           </button>
         </div>
-        <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn btn-dark mr-2"
-          routerLink="bulk-import" ngbTooltip="Bulk Import" id="bulkimport">
+        <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn btn-dark mr-2" routerLink="bulk-import"
+          ngbTooltip="Bulk Import" id="bulkimport">
           <span class="fa fa-upload"></span>
           <!-- <span class="text">Bulk Import</span> -->
         </button>
         <button *ngIf="hasPermission('PMUBC')" type="button" id="newUser" class="add-new btn btn-primary"
-         (click)="newUser()">
+          (click)="newUser()">
           <span class="fa fa-plus"></span>
           <!-- <span class="text">Add User</span> -->
         </button>
@@ -135,8 +135,8 @@
                 <label class="no-attr-label">Not assigned to any groups</label>
                 <label class="no-attr-sub">
                   The user is not assigned to any groups</label>
-                <button type="button" class="btn btn-primary add-button mx-auto"
-                  id="addToGroup" (click)="openGroupModal()">
+                <button type="button" class="btn btn-primary add-button mx-auto" id="addToGroup"
+                  (click)="openGroupModal()">
                   Assign to group
                 </button>
               </div>
@@ -180,13 +180,15 @@
     <div [ngClass]="{
         show: showNewUserWindow || showPasswordSide || showAddAttribute
       }" class="new-user-window position-fixed bg-white border-left p-4">
-      <span class="fa fa-times text-secondary hover close" id="closeicon"
-        (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"></span>
+      <!-- <span class="fa fa-times text-secondary hover close" id="closeicon"
+        (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"></span> -->
       <div *ngIf="showPasswordSide && !showNewUserWindow">
         <div class="d-flex align-items-center justify-content-between mb-4">
           <div class="d-flex align-items-center">
             <h5 class="font-weight-bold">Reset Password</h5>
           </div>
+          <span class="fa fa-times text-secondary hover close" id="closeicon"
+            (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"></span>
         </div>
         <form class="d-flex flex-column" [formGroup]="resetPasswordForm" odpFocusNext>
           <div class="form-group position-relative">
@@ -247,6 +249,8 @@
           <div class="d-flex align-items-center">
             <h5 class="font-weight-bold">Create User</h5>
           </div>
+          <span class="fa fa-times text-secondary hover close" id="closeicon"
+            (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"></span>
         </div>
         <form class="d-flex flex-column" [formGroup]="userForm" odpFocusNext>
           <div *ngIf="userForm.get('userData')" formGroupName="userData">
@@ -427,6 +431,8 @@
               {{ editMode ? 'Edit Attribute' : 'Add Attribute' }}
             </h5>
           </div>
+          <span class="fa fa-times text-secondary hover close" id="closeicon"
+            (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"></span>
         </div>
         <form class="d-flex flex-column" [formGroup]="attributesForm" odpFocusNext>
           <div class="form-group position-relative">
@@ -486,8 +492,7 @@
                 " ngbTooltip="This is a required field"></span>
             </div>
           </div>
-          <button type="button" class="btn btn-primary add-button" id="addAttributes"
-            (click)="addAttribute()">
+          <button type="button" class="btn btn-primary add-button" id="addAttributes" (click)="addAttribute()">
             {{ editMode ? 'Save' : 'Add' }}
           </button>
         </form>
