--- a/src/app/home/control-panel/user-group/user-group.component.scss
+++ b/src/app/home/control-panel/user-group/user-group.component.scss
@@ -1,4 +1,3 @@
-
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
@@ -8,41 +7,53 @@
   padding: 40px;
 }
 
-.card-container {
-  height: calc(100vh - 152px);
-  overflow-x: hidden;
-  overflow-y: auto;
-  .group-card {
-    min-width: 140px;
-    max-width: 140px;
-    min-height: 150px;
-    max-height: 150px;
-    display: inline-block;
-    .group-card-circle{
-      min-width: 100px;
-      max-width: 100px;
-      min-height: 100px;
-      max-height: 100px;
-      border-radius: 50%;
-      border: 4px solid $light;
-      margin: 0 auto;
-      &:focus {
-        outline: none;
-        -webkit-box-shadow:  0 0 10px rgba($black, .5);
-        -moz-box-shadow:  0 0 10px rgba($black, .5);
-        box-shadow:  0 0 10px rgba($black, .5);
-      }
-    }
+.group-page {
+  height: calc(100vh - 60px);
+
+  .group-name {
+    width: 300px;
+  }
+
+  .group-users-count,
+  .group-bots-count,
+  .group-author-flag,
+  .group-appcenter-flag {
+    width: 100px;
+  }
+
+  .group-actions {
+    min-width: 100px;
   }
 }
-.circle {
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
+
+.overlay {
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background: rgba($color: #000000, $alpha: 0.6);
 }
-.name-wrapper {
-  .fa-exclamation-circle {
-    top: 7px;
-    right: 5px;
+
+.new-group-window {
+  height: 100vh;
+  width: 360px;
+  top: 0;
+  right: -360px;
+  z-index: 2;
+  transition: 0.2s;
+  overflow: auto;
+  padding-top: 40px !important;
+
+  &.show {
+    right: 0px !important;
+  }
+}
+
+.list-group-item {
+  &.header {
+    background: #fefefe;
+    font-size: 14px;
+    font-weight: 500;
   }
 }
